# chromeurltitle

./: LICENSE  MARK.json  README.md  README.txt  TRIGGER.json  package.json  pyproject.toml
chrome_extension/: background.js  manifest.json
chrome_extension/work/: shuriken_adapted.pdn
example_config/: config.json
notes/: devlog.txt  notes.txt
src/: __main__.py  bookmarkdata.py  bookmarks_capture_server.py  handler.py
test/: test_logging.py
